syntax = "proto3";

package keybox;
option go_package = "github.com/phaesoo/keybox/gen/go/proto";

service Encrypt {
    rpc Encrypt(EncryptRequest) returns (EncryptReply);
    rpc Decrypt(DecryptRequest) returns (DecryptReply);
}

message EncryptRequest {
    string user_id = 1;
    string key_id = 2;
    repeated string plaintexts = 3;
}

message EncryptReply {
    repeated string ciphertexts = 1;
}

message DecryptRequest {
    string user_id = 1;
    string key_id = 2;
    repeated string ciphertexts = 3;
}

message DecryptReply {
    repeated string plaintexts = 1;
}